feat: add item types
