# internal/transport/http/portfo_schema.go
@@ -1,0 +1,10 @@
+package transport
+
+type CreateItemTypeRequest struct {
+	Name string `json:"name"`
+}
+
+type ItemTypeResponse struct {
+	ID   int32  `json:"id"`
+	Name string `json:"name"`
+}
